--- a/blog/templates/blog/exemplo.html
+++ b/blog/templates/blog/exemplo.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <H1>exemplo 2</H1>
-</body>
-</html>
+{% extends "global/base.html" %}
+
+{% block texto %} Exemplo extendendo base{% endblock texto %}
