--- a/base/global/partials/head.html
+++ b/base/global/partials/head.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina</title>
-    <link rel="stylesheet" href="{% static "home/css/blue.css" %}">
-    <link rel="stylesheet" href="{% static "global/css/red.css" %}">
+    <title>{{title}} pagina</title>
+    <link rel="stylesheet" href="{% static "global/css/red.css" %}" >
+    <link rel="stylesheet" href="{% static "home/css/blue.css" %}" >
 </head>
 <body>
