--- a/blog/templates/blog/exemplo.html
+++ b/blog/templates/blog/exemplo.html
@@ -1,3 +1,3 @@
 {% extends "global/base.html" %}
 
-{% block texto %} Exemplo extendendo base{% endblock texto %}
+{% block texto %} {{nome}}{% endblock texto %}
