--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,3 +1,3 @@
 {% extends "global/base.html" %}
 
-{% block texto %} blog extendendo base{% endblock texto %}
+{% block texto %} {{nome}}{% endblock texto %}
