--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,3 +1,4 @@
 {% extends "global/base.html" %}
 
 {% block texto %} {{nome}}{% endblock texto %}
+{% block posts %}{% include "global/partials/postblock.html" %}{% endblock posts %}
