--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,3 +1,6 @@
 {% extends "global/base.html" %}
 
 {% block texto %}{{nome}}{% endblock texto %}
+{% block home %}
+    <h1> Home content changed by home template</h1>
+{% endblock home %}
