--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,4 +1,9 @@
 {% extends "global/base.html" %}
 
 {% block texto %} {{nome}}{% endblock texto %}
-{% block posts %}{% include "global/partials/postblock.html" %}{% endblock posts %}
+
+{% block posts %}
+    {% for post in posts %}
+        {% include "global/partials/postblock.html" %}
+    {% endfor %}
+{% endblock posts %}
