--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,8 @@
 {% extends "global/base.html" %}
 
-{% block texto %} {{nome}}{% endblock texto %}
+{% if nome %}
+    {% block texto %} {{nome}} {% endblock texto %}
+{% endif %} 
 
 {% block posts %}
     {% for post in posts %}
