--- a/base/global/partials/menu.html
+++ b/base/global/partials/menu.html
@@ -1,5 +1,5 @@
-<nav>
-    <ul>
+<nav class="menu">
+    <ul class="menu-links">
         <li>
             <a href="{% url 'home:home' %}">home</a>
         </li>
